--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,16 @@
 // for the documentation about the tasks.json format
 {
 	"version": "2.0.0",
+	"windows": {
+        "options": {
+            "shell": {
+                "executable": "cmd.exe",
+                "args": [
+                    "/d", "/c"
+                ]
+            }
+        }
+    },
 	"tasks": [
 		{
 			"type": "npm",
