--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
 	"icon": "icon.png",
 	"description": "",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"engines": {
 		"vscode": "^1.29.0"
 	},
@@ -87,33 +87,27 @@
 								"type": "array",
 								"default": [
 									{
+										"label": "Echo Command",
 										"command": "echo",
 										"args": [
 											"Hello#${relativeFile}#${relativeFileDirname}!"
 										]
 									}
 								],
-								"description": "An array of commands of syntax '{ \"command\":\"cmd\",\"args\":[\"argument\"] }' which will be execute on a selected file. The argument array are appended after the filename. The variable ${workspaceFolder} is enabled and will be replaced.",
+								"description": "An array of commands of syntax '{\"label\":\"someLabel\",\"command\":\"cmd\",\"args\":[\"argument\"] }' which will be execute on a selected file.",
 								"scope": "null"
 							},
 							"debug": {
 								"type": "object",
 								"default": {
 									"py": {
-										"type": "python",
-										"program": "${file}"
+										"name": "Python: Current File"
 									},
 									"c": {
-										"type": "cppvsdbg",
-										"program": "${file}"
+										"name": "C: Current File"
 									},
 									"cpp": {
-										"type": "cppvsdbg",
-										"program": "${file}"
-									},
-									"exe": {
-										"type": "cppvsdbg",
-										"program": "${file}"
+										"name": "CPP: Current File"
 									}
 								},
 								"patternProperties": {
@@ -121,35 +115,13 @@
 										"type": "object",
 										"description": "The file extension settings",
 										"properties": {
-											"type": {
-												"type": "string",
-												"default": "python",
-												"description": "The type of debugging configuration (same as in launch.json)"
-											},
-											"program": {
-												"type": "string",
-												"default": "${file}",
-												"description": "Full path to program executable"
-											},
-											"env": {
-												"type": "object",
-												"default": "\"PYTHONPATH\":\"${env:PYTHONPATH};${workspaceFolder}\\SystemTest\\PiTest_framework\\piTest\"",
-												"description": "Environment variables defined as a key value pair. Property ends up being the Environment Variable and the value of the property ends up being the value of the Env Variable."
-											},
-											"envFile": {
-												"type": "string",
-												"default": "${workspaceFolder}/.vscode/path.env",
-												"description": "Absolute path to a file containing environment variable definitions. This file has key value pairs separated by an equals sign per line. E.g. KEY=VALUE"
-											},
-											"cwd": {
-												"type": "string",
-												"default": "${workspaceFolder}",
-												"description": "The working directory of the target."
+											"name": {
+												"type":"string",
+												"description": "Name of configuration; appears in the launch configuration drop down menu."
 											}
 										},
 										"required": [
-											"type",
-											"program"
+											"name"
 										]
 									}
 								},
@@ -160,17 +132,12 @@
 						"default": {
 							"debug": {
 								"example-extension": {
-									"type": "python",
-									"program": "${file}",
-									"envFile": "${workspaceFolder}/.vscode/path.env",
-									"env": {
-										"PYTHONPATH": "${env:PYTHONPATH};${workspaceFolder}\\SystemTest\\PiTest_framework\\piTest"
-									},
-									"cwd": "${workspaceFolder}"
+									"name": "Python: Current File"
 								}
 							},
 							"externalCommands": [
 								{
+									"label":"Echo Command",
 									"command": "echo",
 									"args": [
 										"Hello#${relativeFile}#${relativeFileDirname}!"
